--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "dotenv": "^9.0.2",
     "express": "^4.19.2",
     "express-async-handler": "^1.1.4",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.22",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^2.0.22",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.1.2"
   }
 }
