--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-chips": "^0.8.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^5.4.0",
     "react-lottie": "^1.2.3",
     "react-notification-badge": "^1.5.1",
     "react-router-dom": "^5.2.0",
@@ -30,9 +31,8 @@
     "socket.io-client": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
-  
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",  
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -56,4 +56,3 @@
     ]
   }
 }
-
