--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,12 @@
     "chat-app": "file:..",
     "emoji-mart": "^5.6.0",
     "framer-motion": "^4.1.17",
+    "lottie-react": "^2.4.1",
     "moment": "^2.30.1",
     "react": "^17.0.2",
     "react-chips": "^0.8.0",
     "react-dom": "^17.0.2",
     "react-icons": "^5.4.0",
-    "react-lottie": "^1.2.3",
     "react-notification-badge": "^1.5.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
